--- a/style.css
+++ b/style.css
@@ -743,6 +743,7 @@ font-weight: bold;
 
 
 .counter {
+  color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -762,11 +763,11 @@ font-weight: bold;
 
 .counter-suffix {
   font-size: 0.6em;
-  color: gray;
+  color: white;
 }
 
 .counter-title {
   margin-top: 10px;
   font-size: 1em;
-  color: #333;
+  color: white;
 }
