--- a/style.css
+++ b/style.css
@@ -888,3 +888,19 @@ font-weight: bold;
   font-size: 30px;
   padding-left: 20px;
 }
+
+
+
+
+
+
+
+
+
+
+
+.elementor-icon {
+  width: 80px; /* Adjust size as needed */
+  height: 70px; 
+  color: white;
+}
