--- a/style.css
+++ b/style.css
@@ -749,7 +749,6 @@ font-weight: bold;
 
 
 .counter {
-  color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -768,14 +767,14 @@ font-weight: bold;
 }
 
 .counter-suffix {
-  
+  color: black;
   font-size: 30px;
   margin-left: 30px;
   color: white;
 }
 
 .counter-title {
-  margin-top: 10px;
+  margin-top: 0px;
   font-size: 1em;
   color: white;
 }
@@ -823,6 +822,7 @@ font-weight: bold;
 
 
 .counter {
+  color: black;
   font-size: 24px;
   font-weight: bold;
   text-align: center;
@@ -834,9 +834,9 @@ font-weight: bold;
 }
 .count-number {
   display: inline-block;
-  line-height: 100px;
-  color: white;
-  font-size: 32px;
+  line-height: 80px;
+  color: black;
+  font-size: 29px;
   animation: countUp 4s forwards;
 }
 
@@ -887,8 +887,8 @@ font-weight: bold;
 
 
 .jess {
-  color: white;
-  font-size: 30px;
+  color: black;
+  font-size: 20px;
   padding-left: 20px;
 }
 
