--- a/style.css
+++ b/style.css
@@ -769,14 +769,13 @@ font-weight: bold;
 .counter-suffix {
   color: black;
   font-size: 30px;
-  margin-left: 30px;
-  color: white;
+  margin-left: 10px;
 }
 
 .counter-title {
   margin-top: 0px;
   font-size: 1em;
-  color: white;
+  color: black;
 }
 
 
@@ -888,8 +887,8 @@ font-weight: bold;
 
 .jess {
   color: black;
-  font-size: 20px;
-  padding-left: 20px;
+  font-size: 25px;
+  padding-bottom: 15px;
 }
 
 
