--- a/style.css
+++ b/style.css
@@ -871,19 +871,24 @@ font-weight: bold;
 
 .elijah-container {
   display: flex;
-  height: 10px;
+  height: 15px;
   z-index: 3;
   font-weight: bolder;
   font-size: 50px;
-  color: white;
+  color: black;
 
 }
 
 .moses-countdown {
-  color: white;
+  font-size: 45px;
+  color: black;
+  margin-bottom: 10px;
   z-index: 3;
 
 }
+
+
+
 
 
 .jess {
