--- a/style.css
+++ b/style.css
@@ -834,7 +834,7 @@ font-weight: bold;
 }
 .count-number {
   display: inline-block;
-  line-height: 80px;
+  line-height: 79px;
   color: black;
   font-size: 29px;
   animation: countUp 4s forwards;
@@ -865,13 +865,13 @@ font-weight: bold;
 
 
 
+/* Style the dropdown button */
 
 
 
 
 .elijah-container {
   display: flex;
-  height: 15px;
   z-index: 3;
   font-weight: bolder;
   font-size: 50px;
@@ -880,9 +880,9 @@ font-weight: bold;
 }
 
 .moses-countdown {
-  font-size: 45px;
+  font-size: 47px;
   color: black;
-  margin-bottom: 10px;
+margin-bottom: 10px;
   z-index: 3;
 
 }
@@ -894,7 +894,7 @@ font-weight: bold;
 .jess {
   color: black;
   font-size: 25px;
-  padding-bottom: 15px;
+  padding-bottom: 0px;
 }
 
 
