--- a/style.css
+++ b/style.css
@@ -358,28 +358,34 @@ font-weight: bold;
 
 
 .left-panel {
-  flex: 0 0 33%; /* Take 33% of the screen */
+  flex: 0 0 33%;
   padding: 20px;
   box-sizing: border-box;
 }
 
 .right-panel {
-  flex: 1; /* Take the remaining space */
-  padding: 20px;
+  flex: 1; 
+  padding: 75px 20px 20px 20px;
   box-sizing: border-box;
 }
 
-/* Media query for screens below 800px */
+
+
 @media (max-width: 800px) {
   .asake {
       flex-direction: column; /* Stack items vertically */
   }
-  .left-panel, .right-panel {
+  .left-panel {
       width: 100%; /* Each panel takes full width */
   }
+  .right-panel {
+    width: 100%;
+    padding: 20px 20px 20px 20px;
+}
 }
 
-/* Card styling */
+
+
 .card {
   width: 100px;
   margin-bottom: 20px;
