--- a/style.css
+++ b/style.css
@@ -728,7 +728,7 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-family: Arial, sans-serif;
+  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
 }
 
 .counter-number-wrapper {
