--- a/style.css
+++ b/style.css
@@ -362,7 +362,7 @@ body {
   .card img {
     width: 100px;
     height: 100px;
-    border-radius: 50%; /* Make the image circular */
+    border-radius: 20px; /* Make the image circular */
     object-fit: cover;
   }
   
