--- a/style.css
+++ b/style.css
@@ -25,9 +25,6 @@ body {
 }
 
 
-.card {
-  border: none; 
-}
 
 h1 {
   color: black;
@@ -357,15 +354,16 @@ h1 {
 
 
 .card {
+  border: none; 
   width: 100px;
   margin-bottom: 20px;
   text-align: center;
 }
 
 .card img {
-  width: 100px;
+  width: 130px;
   height: 100px;
-  border-radius: 50%; /* Make the image circular */
+  border-radius: 20px; 
   object-fit: cover;
 }
 
