--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 body {
-  font-family: 'Manrope', sans-serif;  color: black;
+  font-family: 'Manrope', sans-serif;  
+  color: black;
     font-size: 15px;
-  font-weight: 900px;
+    font-weight: 400;
+
     
   }
   
@@ -93,7 +95,7 @@ body {
   
   
   .carousel-item img {
-      height: 310px;
+      height: 290px;
   }
   
   
@@ -329,6 +331,8 @@ body {
   }
   
   .right-panel {
+    font-weight: 400;
+
     text-align: center;
     z-index: 50;
     flex: 1; 
@@ -984,14 +988,17 @@ body {
   
   
   
-  
-  
+
   
   
   
       /* Navbar styles */
       .navbar {
-        
+        font-family: 'Manrope', sans-serif;
+        font-size: 14px;
+        font-weight: 400;
+    padding-top: 0 !important;
+    padding-bottom: 0 !important;
         z-index: 3;
         display: flex;
         justify-content: space-between;
