--- a/style.css
+++ b/style.css
@@ -1095,4 +1095,38 @@ body {
   
   
   
+  .elijah-container {
+    justify-content: center;
+    text-align: center;
+    display: flex;
+    z-index: 3;
+    font-weight: bolder;
+    font-size: 50px;
+    color: black;
+  
+  }
+  
+  .moses-countdown {
+    font-size: 47px;
+    color: black;
+  margin-bottom: 10px;
+    z-index: 3;
+  
+  }
+  
+  
+  
+  
+  
+  .jess {
+    color: black;
+    font-size: 25px;
+    padding-bottom: 0px;
+  }
+  
+  
+  
+  
+  
+  
   
