--- a/style.css
+++ b/style.css
@@ -70,7 +70,8 @@ body {
   
   @media (max-width: 799px) {
       .carousel-item img {
-          height: 270px; /* Adjusted height for screens below 800px */
+        max-width: 100%
+          height: 270px; 
       }
   }
   
@@ -95,6 +96,7 @@ body {
   
   
   .carousel-item img {
+    max-width: 100%
       height: 290px;
   }
   
