--- a/style.css
+++ b/style.css
@@ -70,9 +70,11 @@ body {
   
   @media (max-width: 799px) {
       .carousel-item img {
-        max-width: 100%
+        width: 100%
           height: 270px; 
       }
+
+    
   }
   
   /* Responsive layout - makes a one column-layout instead of two-column layout */
@@ -96,7 +98,7 @@ body {
   
   
   .carousel-item img {
-    max-width: 100%
+    width: 100%
       height: 290px;
   }
   
