--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,42 @@ body {
     padding: 0;
   }
 
+  * {
+    margin: 0;
+    box-sizing: border-box;
+  }
+  
+  .image-container {
+    position: relative;
+    width: 100%;
+  }
+  
+  .image-container img {
+    opacity: 0.6;
+    width: 100%;
+    height: 300px;
+    z-index: 0;
+    position: relative;
+}
+  
+  .caption {
+    position: absolute;
+    bottom: 20px; /* Adjust as needed */
+    left: 20px; /* Adjust as needed */
+    z-index: 3;
+    font-weight: bolder;
+    font-size: 35px;
+    font-weight: bold; /* Optional: make the text bold */
+    color: black;
+    padding: 10px;
+    border-radius: 5px;
+    text-underline-offset: 25px;
+    text-decoration: underline;
+    text-decoration-color: #AB5943;
+
+  }
+  
+  
   
  
 
