--- a/styles.css
+++ b/styles.css
@@ -27,13 +27,6 @@ body {
     z-index: 0;
     position: relative;
 }
-
-
-@media (max-width: 800px) {
-    .caption {
-        font-size: 23px;
-    }
-}
   
   .caption {
     position: absolute;
@@ -51,6 +44,12 @@ body {
     text-decoration-color: #AB5943;
 
   }
+
+  @media (max-width: 800px) {
+    .caption {
+        font-size: 25px;
+    }
+}
   
   
   
@@ -63,6 +62,7 @@ body {
   }
 
   .nav-list {
+    z-index: 999;
     display: flex;
     list-style: none;
     margin: 0;
@@ -70,10 +70,12 @@ body {
   }
 
   .nav-list li {
+    z-index: 999;
     margin-right: 10px;
   }
 
   .nav-list a {
+    z-index: 999;
     color: black;
     font-style: bold;
     text-decoration: none;
@@ -120,6 +122,7 @@ body {
   /* Responsive styles */
   @media (max-width: 800px) {
     .nav-list {
+      z-index: 999;
       display: none;
     }
     .menu-button {
@@ -137,6 +140,7 @@ body {
 
 
 .navbar {
+  z-index: 999;
     
     font-family: 'Manrope', sans-serif;
     font-size: 14px;
