--- a/style.css
+++ b/style.css
@@ -367,8 +367,8 @@ body {
   }
   
   .card img {
-    width: 100%;
-    height: 100%;
+    max-width: 350px;
+    height: 250px;
     border-radius: 20px;
     object-fit: cover;
   }
