--- a/style.css
+++ b/style.css
@@ -359,18 +359,19 @@ body {
   }
   
   
-  
-  .card {
-    width: 100px;
-    margin-bottom: 20px;
-    text-align: center;
-  }
+  @media (max-width: 800px) {
+    .card img {
+        width: 300%;
+        height: 200px;
+    }
+}
   
   .card img {
+    
     max-width: 350px;
     height: 250px;
     border-radius: 20px;
-    object-fit: cover;
+    
   }
   
   
