--- a/styles.css
+++ b/styles.css
@@ -15,16 +15,59 @@ body {
     box-sizing: border-box;
   }
   
+p { font-size: 15px;
+font-family: 'Manrope', sans-serif;
+padding: 15px;}
+
+
+h1 { text-align: center;
+font-size: 25px;
+padding-top: 25px;
+font-family: 'Manrope', sans-serif;
+font-weight: bold;
+}
+
+.sharon { padding: 20px;
+}
+
+
+
+.green {
+  display: flex;
+}
+
+.left {
+  width: 50%;
+}
+
+.right { 
+  
+  width: 50%;
+  text-align: center;
+padding-left: 35px;
+align-items: center;
+justify-content: center;
+}
+
+/* Media query for screens below 800px */
+@media (max-width: 800px) {
+  .green {
+      flex-direction: column;
+  }
+  .right, .left {
+      width: 100%;
+      height: 50vh; /* Adjust height as needed */
+  }
+}
+
   .image-container {
     position: relative;
-    width: 100%;
   }
   
   .image-container img {
     opacity: 0.6;
-    width: 100%;
-    height: 300px;
     z-index: 0;
+    height: 250px;
     position: relative;
 }
   
@@ -47,7 +90,8 @@ body {
 
   @media (max-width: 800px) {
     .caption {
-        font-size: 20px;
+        font-size: 25px;
+        text-underline-offset: 20px;
     }
 }
   
@@ -155,4 +199,60 @@ body {
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  .banana-container {
+    text-align: center;
+  
+}
+.banana-container img {
+
+    max-width: 450px;
+    height: 250px;
+    border: 5px;
+    box-shadow: 0 4px 8px rgba(228, 125, 23, 0.2);
+    transition: border-color 0.2s ease, box-shadow 0.3s ease;
+}
+
+
+
+.banana-container img:hover {
+  border-color: #Ab5943;
+  box-shadow: 0 4px 30px rgba(108, 21, 21, 0.8); /* Strong hover effect */
+}
+
+
+.banana-caption {
+    margin-top: 10px;
+    padding: 15px;
+    font-size: 16px;
+    color: #333;
+}
+  
 
