--- a/styles.css
+++ b/styles.css
@@ -14,10 +14,16 @@ body {
     margin: 0;
     box-sizing: border-box;
   }
+
+  .don {padding-left: 20px;
+  padding-right: 20px;
+padding-top: 10px;}
   
-p { font-size: 15px;
-font-family: 'Manrope', sans-serif;
-padding: 15px;}
+  h3 { text-align: center;}
+  
+  .cop { font-size: 15px;
+    font-family: 'Manrope', sans-serif;
+    padding: 15px;}
 
 
 h1 { text-align: center;
@@ -32,23 +38,7 @@ font-weight: bold;
 
 
 
-.green {
-  padding: 15px;
-  display: flex;
-}
 
-.left {
-  width: 50%;
-}
-
-.right { 
-  
-  width: 50%;
-  text-align: center;
-padding-left: 35px;
-align-items: center;
-justify-content: center;
-}
 
 
   .image-container {
@@ -218,32 +208,84 @@ justify-content: center;
 
 
 
-  .banana-container {
-    text-align: center;
-  
-}
-.banana-container img {
 
-    max-width: 450px;
-    height: 250px;
-    border: 5px;
-    box-shadow: 0 4px 8px rgba(228, 125, 23, 0.2);
-    transition: border-color 0.2s ease, box-shadow 0.3s ease;
+.flex-container {
+  display: flex;
+  flex-direction: row;
+  text-align: center;
 }
 
+.flex-item-left {
+  padding: 0px;
+  flex: 50%;
+}
 
+.flex-item-right {
+   flex: 50%;
+   padding: 0px;
+}
 
-.banana-container img:hover {
+/* Responsive layout - makes a one column-layout instead of two-column layout */
+@media (max-width: 800px) {
+  .flex-container {
+    flex-direction: column;
+  }
+}
+
+.peach-container {
+  text-align: center;
+  margin: 10px;
+  padding: 15px;
+ 
+}
+.peach-image {
+  width: 100%;
+  max-width: 350px;
+  height: 250px;
+  border: 5px solid transparent;
+  box-shadow: 0 4px 8px rgba(88, 51, 51, 0.4);
+  transition: border-color 0.3s ease, box-shadow 0.3s ease;
+}
+.peach-image:hover {
   border-color: #Ab5943;
-  box-shadow: 0 4px 30px rgba(108, 21, 21, 0.8); /* Strong hover effect */
+  box-shadow: 0 4px 30px rgba(214, 162, 149, 0.8); /* Strong hover effect */
+}
+.peach-caption {
+  margin-top: 10px;
+  font-size: 16px;
+  color: #333;
 }
 
 
-.banana-caption {
-    margin-top: 10px;
-    padding: 15px;
-    font-size: 16px;
-    color: #333;
+
+
+
+
+
+
+.mango-container {
+  padding: 15px;
+  margin: 10px;
+  text-align: center;
+
 }
-  
+.mango-image {
+  width: 100%;
+  max-width: 350px;
+  height: 250px;
+  border: 5px solid transparent;
+  box-shadow: 0 4px 8px rgba(214, 162, 149, 0.8); /* Strong border shadow */
+  transition: border-color 0.3s ease, box-shadow 0.3s ease;
+}
+.mango-image:hover {
+  border-color: #Ab5943;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.6); /* Strong hover effect */
+}
+.mango-caption {
+  margin-top: 10px;
+  font-size: 16px;
+  color: #333;
+}
+
+
 
