--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ font-weight: bold;
   .image-container img {
     opacity: 0.6;
     z-index: 0;
-    height: 250px;
+    max-height: 250px;
     position: relative;
 }
   
@@ -176,8 +176,8 @@ font-weight: bold;
     justify-content: space-between;
     align-items: center;
     background-color: white;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 25px;
+          padding-right: 25px;
   }
 
 
@@ -231,6 +231,31 @@ font-weight: bold;
 
 
 
+  .george {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+
+  .sparrow {
+    flex: 0 0 35%;
+    padding: 20px;
+    box-sizing: border-box;
+    background-color: white;
+  }
+
+  .eagle {
+    flex: 0 0 65%;
+    padding: 20px;
+    box-sizing: border-box;
+    background-color: white;
+  }
+
+  @media (max-width: 800px) {
+    .sparrow, .eagle {
+      flex: 100%;
+    }
+  }
 
 
 
@@ -363,7 +388,7 @@ text-align: center;}
 
 /* Close button */
 .close {
-  color: #aaa;
+  color: red;
   float: right;
   font-size: 28px;
   font-weight: bold;
@@ -394,4 +419,136 @@ text-align: center;}
 
 .modal-button:hover {
   background-color: #Ab5943; /* Hover background color */
+}
+
+
+
+
+.odu {padding: 20px;}
+
+
+
+
+
+.dove { text-align: center;}
+
+
+.hoverable-image {
+  padding-left: 30px;
+  border-radius: 20px;
+  width: 100%;
+  height: 100%;
+  max-height: 250px;
+  max-width: 350px;
+  
+  transition: box-shadow 0.3s ease;
+}
+
+.hoverable-image:hover {
+  box-shadow: 0 4px 16px rgba(171, 89, 67, 0.8);
+}
+
+
+
+
+
+
+
+.dog { color: #Ab5943;}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
+@media (max-width: 800px) {
+  .new-flex-container {
+    flex-direction: column;
+  }
+}
+
+
+.new-custom-container {
+  position: relative;
+  overflow: hidden;
+  background-size: cover;
+  height: 100%; 
+}
+
+.new-container-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #B8705D;
+  z-index: 1;
+}
+
+
+
+.new-flex-container {
+  position: relative;
+  z-index: 3;
+  display: flex;
+  flex-direction: row;
+  padding: 20px;
+}
+
+
+
+
+
+
+@media (max-width: 800px) {
+  .new-flex-container {
+    flex-direction: column;
+  }
+}
+
+
+.custom-list {
+
+  text-align: center;
+  list-style-type: none; /* Remove the default bullets */
+   /* Remove default padding */
+}
+
+.custom-list li {
+  padding: 10px;
+  text-align: center;
+  color: black; /* Make the list items black */
+}
+
+.custom-list li a {
+  color: black; /* Make the link text black */
+  text-decoration: none; /* Remove underline from links */
+}
+
+.azonto { text-align: center;
+font-size: 23px;}
+
+.crew { text-align: center;
+text-align: center;
+align-items: center;
+align-self: center;}
+
+
+.w3-third { align-items: center;
+justify-content: center;
+text-align: center;}
+
+
+.custom-list li a:hover {
+  color: gold; /* Change color to gold on hover */
 }
