--- a/style.css
+++ b/style.css
@@ -357,22 +357,23 @@ body {
         padding: 20px 20px 20px 20px;
     }
     }
+
+.styled-image {
+    width: 100%;
+    height: 100%
+      max-width: 350px;
+      max-height: 250px;
+      border-radius: 20px;
+    }
     
     
     @media (max-width: 800px) {
-      .card img {
+      .styled-image {
           width: 300%;
           height: 200px;
       }
   }
     
-    .card img {
-      
-      max-width: 350px;
-      height: 250px;
-      border-radius: 20px;
-      
-    }
     
     
     
