--- a/style.css
+++ b/style.css
@@ -152,6 +152,8 @@ body {
   }
   
   .image {
+      box-shadow: 0 4px 16px rgba(171, 89, 67, 0.8);
+
     width: 220px;
     height: 220px;
     overflow: hidden;
