--- a/style.css
+++ b/style.css
@@ -359,6 +359,8 @@ body {
       padding: 20px 20px 20px 20px;
   }
   }
+
+
   .card {
     width: 310px;
     height: 250px;
@@ -379,9 +381,13 @@ body {
   
   @media (max-width: 800px) {
     .card img {
-        width: 300%;
+        width: 300px;
         height: 200px;
     }
+.card { width: 300px;
+       height: 200px;
+      }
+    
 }
   
   
