--- a/style.css
+++ b/style.css
@@ -331,6 +331,8 @@ body {
   
   
   .left-panel {
+    justify-content: center;
+      align-items: center;
     flex: 0 0 50%;
     padding: 20px;
     box-sizing: border-box;
@@ -339,7 +341,6 @@ body {
   .right-panel {
     font-weight: 400;
 
-    text-align: center;
     z-index: 50;
     flex: 1; 
     padding: 75px 20px 20px 20px;
