--- a/styles.css
+++ b/styles.css
@@ -601,7 +601,7 @@ text-align: center;}
             z-index: 2000;
         }
         .lion {
-            background-color: #Ab5943;
+            background-color: #D6A295;
             border-radius: 20px;
             border: 0px;
             padding: 10px 20px;
