--- a/styl.css
+++ b/styl.css
@@ -1,115 +1,212 @@
 body {
-    font-family: 'Manrope', sans-serif;  
-    color: black;
+  font-family: 'Manrope', sans-serif;  
+  color: black;
+
+    font-weight: 500;
+font-size: 15px;
+    margin: 0;
+    padding: 0;
+  }
+
+  * {
+    margin: 0;
+    box-sizing: border-box;
+  }
+
   
-      font-weight: 500;
-  font-size: 15px;
-      margin: 0;
-      padding: 0;
+
+  .navbar img {
+      padding-left: 10px;
+      max-width: 220px;
+      height: 120px;
     }
   
-    * {
+    .nav-list {
+      z-index: 999;
+      display: flex;
+      list-style: none;
       margin: 0;
-      box-sizing: border-box;
+      padding: 10px;
     }
-
-    
-
-    .navbar img {
-        padding-left: 10px;
-        max-width: 220px;
-        height: 120px;
-      }
-    
+  
+    .nav-list li {
+      z-index: 999;
+      margin-right: 10px;
+    }
+  
+    .nav-list a {
+      z-index: 999;
+      color: black;
+      font-style: bold;
+      text-decoration: none;
+      padding: 10px;
+      display: block;
+      transition: background-color 0.3s ease;
+    }
+  
+    .nav-list a:hover {
+      background-color: #D6A295;
+    }
+  
+    .menu-button {
+      display: none;
+      font-size: 35px;
+      color: #Ab5943; /* Font color black */
+      background: none;
+      border: none;
+      cursor: pointer;
+    }
+  
+    .dropdown-content {
+      width: 200px;
+      display: none;
+      position: absolute;
+      right: 10px;
+      top: 30px;
+      background-color: white;
+      box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+      z-index: 1;
+    }
+  
+    .dropdown-content a {
+        z-index: 3;
+      color: black; 
+      padding: 10px 12px 16px;
+      text-decoration: none;
+      display: block;
+    }
+  
+    .dropdown-content a:hover {
+      background-color: #D6A295;
+    }
+  
+    /* Responsive styles */
+    @media (max-width: 800px) {
       .nav-list {
         z-index: 999;
-        display: flex;
-        list-style: none;
-        margin: 0;
-        padding: 0;
+        display: none;
       }
-    
-      .nav-list li {
-        z-index: 999;
-        margin-right: 10px;
-      }
-    
-      .nav-list a {
-        z-index: 999;
-        color: black;
-        font-style: bold;
-        text-decoration: none;
-        padding: 10px;
-        display: block;
-        transition: background-color 0.3s ease;
-      }
-    
-      .nav-list a:hover {
-        background-color: #D6A295;
-      }
-    
       .menu-button {
-        display: none;
-        font-size: 35px;
-        color: #Ab5943; /* Font color black */
-        background: none;
-        border: none;
-        cursor: pointer;
-      }
-    
-      .dropdown-content {
-        display: none;
-        position: absolute;
-        right: 10px;
-        top: 60px;
-        background-color: white;
-        box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
-        z-index: 1;
-      }
-    
-      .dropdown-content a {
-          z-index: 3;
-        color: black; 
-        padding: 10px 12px 16px;
-        text-decoration: none;
         display: block;
       }
-    
-      .dropdown-content a:hover {
-        background-color: #D6A295;
+    }
+  
+    @media (max-width: 800px), (hover: none) {
+      .dropdown-content.show {
+        display: block;
       }
+    }
+  
+  
+  
+  
+  .navbar {
+    z-index: 1;
+      
+      font-family: 'Manrope', sans-serif;
+      font-size: 16px;
+      font-weight: 500;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background-color: white;
+      padding-left: 25px;
+            padding-right: 25px;
+    }
+  
+
+
+
+
+
+
+
+
+
     
-      /* Responsive styles */
-      @media (max-width: 800px) {
-        .nav-list {
-          z-index: 999;
-          display: none;
-        }
-        .menu-button {
-          display: block;
-        }
-      }
-    
-      @media (max-width: 800px), (hover: none) {
-        .dropdown-content.show {
-          display: block;
-        }
-      }
-    
-    
-    
-    
-    .navbar {
-      z-index: 1;
-        
-        font-family: 'Manrope', sans-serif;
-        font-size: 16px;
-        font-weight: 500;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        background-color: white;
-        padding-left: 25px;
-              padding-right: 25px;
-      }
-    
+.image-container {
+  position: relative;
+}
+
+.image-container img {
+  opacity: 0.6;
+  z-index: 0;
+  max-height: 400px;
+  position: relative;
+}
+
+.caption {
+  position: absolute;
+ bottom: 200px; /* Adjust as needed */
+  left: 20px; /* Adjust as needed */
+  z-index: 3;
+  font-weight: bolder;
+  font-size: 35px;
+  font-weight: bold; /* Optional: make the text bold */
+  color: black;
+  padding: 10px;
+  border-radius: 5px;
+  text-underline-offset: 25px;
+  text-decoration: underline;
+  text-decoration-color: #AB5943;
+
+}
+
+@media (max-width: 800px) {
+  .caption {
+      font-size: 25px;
+      text-underline-offset: 20px;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+.dropbtn {
+background-color: white;
+color: black;
+padding: 16px;
+font-size: 16px;
+border: none;
+cursor: pointer;
+}
+
+.dropdown {
+position: relative;
+display: inline-block;
+}
+
+.dropdown-content {
+display: none;
+position: absolute;
+background-color: #f9f9f9;
+min-width: 160px;
+box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+z-index: 1;
+}
+
+.dropdown-content a {
+color: black;
+padding: 12px 16px;
+text-decoration: none;
+display: block;
+}
+
+.dropdown-content a:hover {background-color: #AB5943}
+
+.dropdown:hover .dropdown-content {
+display: block;
+}
+
+.dropdown:hover .dropbtn {
+background-color: white;
+}
