--- a/style.css
+++ b/style.css
@@ -1157,5 +1157,27 @@ body {
   
   
   
+    .dropdown-content {
+      width: 200px;
+      display: none;
+      position: absolute;
+      right: 10px;
+      top: 30px;
+      background-color: white;
+      box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+      z-index: 1;
+    }
+  
+    .dropdown-content a {
+        z-index: 3;
+      color: black; 
+      padding: 10px 12px 16px;
+      text-decoration: none;
+      display: block;
+    }
+  
+    .dropdown-content a:hover {
+      background-color: #D6A295;
+    }
   
   
