--- a/style.css
+++ b/style.css
@@ -1157,32 +1157,43 @@ body {
   
   
   
-    .dropdown-content {
-      width: 200px;
-      display: none;
-      position: absolute;
-      right: 10px;
-      top: 30px;
-      background-color: white;
-      box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
-      z-index: 1;
-    }
+
+.dropbtn {
+  background-color: white;
+  color: black;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  }
   
-    .dropdown-content a {
-        z-index: 3;
-      color: black; 
-      padding: 10px 12px 16px;
-      text-decoration: none;
-      display: block;
-    }
+  .dropdown {
+  position: relative;
+  display: inline-block;
+  }
   
-    .dropdown-content a:hover {
-      background-color: #D6A295;
-    }
+  .dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  }
   
-      @media (max-width: 800px), (hover: none) {
-      .dropdown-content.show {
-        display: block;
-      }
-    }
+  .dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  }
   
+  .dropdown-content a:hover {background-color: #AB5943}
+  
+  .dropdown:hover .dropdown-content {
+  display: block;
+  }
+  
+  .dropdown:hover .dropbtn {
+  background-color: white;
+  }
