--- a/style.css
+++ b/style.css
@@ -1172,13 +1172,16 @@ body {
   display: inline-block;
   }
   
+ 
   .dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+    width: 200px;
+    display: none;
+    position: absolute;
+    right: 10px;
+    top: 30px;
+    background-color: white;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 1;
   }
   
   .dropdown-content a {
