--- a/styles.css
+++ b/styles.css
@@ -628,3 +628,93 @@ text-align: center;}
         hr {
             margin: 10px 0;
         }
+
+
+
+
+.dropbtn {
+  background-color: white;
+  color: black;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  }
+  
+  .dropdown {
+  position: relative;
+  display: inline-block;
+  }
+  
+  .dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  }
+  
+  .dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  }
+  
+  .dropdown-content a:hover {background-color: #AB5943}
+  
+  .dropdown:hover .dropdown-content {
+  display: block;
+  }
+  
+  .dropdown:hover .dropbtn {
+  background-color: white;
+  }
+
+
+
+
+
+
+    .dropdown-content {
+      width: 200px;
+      display: none;
+      position: absolute;
+      right: 10px;
+      top: 30px;
+      background-color: white;
+      box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+      z-index: 1;
+    }
+  
+    .dropdown-content a {
+        z-index: 3;
+      color: black; 
+      padding: 10px 12px 16px;
+      text-decoration: none;
+      display: block;
+    }
+  
+    .dropdown-content a:hover {
+      background-color: #D6A295;
+    }
+  
+    /* Responsive styles */
+    @media (max-width: 800px) {
+      .nav-list {
+        z-index: 999;
+        display: none;
+      }
+      .menu-button {
+        display: block;
+      }
+    }
+  
+    @media (max-width: 800px), (hover: none) {
+      .dropdown-content.show {
+        display: block;
+      }
+    }
+  
+  
