--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Manrope', sans-serif;  
+      font-family: Arial, Helvetica, sans-serif;
   color: black;
     font-size: 14px;
     font-weight: 400;
@@ -754,8 +754,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-  font-family: 'Manrope', sans-serif;
-  }
+    font-family: Arial, Helvetica, sans-serif;  }
   
   .counter-number-wrapper {
     display: flex;
@@ -1022,7 +1021,7 @@ body {
   
       /* Navbar styles */
       .navbar {
-        font-family: 'Manrope', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
         font-size: 16px;
         font-weight: 400;
     padding-top: 0 !important;
