--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body {
       font-family: Arial, Helvetica, sans-serif;
   color: black;
+        line-height: 1.9; 
+
     font-size: 14px;
     font-weight: 400;
 
@@ -62,6 +64,7 @@ body {
   }
   
   .flex-item-right {
+          line-height: 1.9; 
     font-size: 14px;
     background-color: white;
     padding: 30px 50px 0px 30px;
@@ -340,6 +343,8 @@ body {
   
   .right-panel {
     font-weight: 400;
+font-size: 14px;
+          line-height: 1.9; 
 
     z-index: 50;
     flex: 1; 
