--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 body {
   font-family: 'Manrope', sans-serif;  
   color: black;
-
+  line-height: 1.5; 
     font-weight: 500;
 font-size: 15px;
     margin: 0;
