--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,12 @@
 
 
 body {
-  font-family: 'Manrope', sans-serif;  
+ font-family: Arial, Helvetica, sans-serif; 
   color: black;
+   text-align: justify;
   line-height: 1.5; 
     font-weight: 500;
-font-size: 15px;
+font-size: 14px;
     margin: 0;
     padding: 0;
   }
@@ -23,20 +24,24 @@ padding-top: 10px;}
 
 
   
-  .cop { font-size: 15px;
-    font-family: 'Manrope', sans-serif;
-    padding: 15px;}
+  .cop { font-size: 14px;
+   font-family: Arial, Helvetica, sans-serif;
+    padding: 15px;
+         text-align: justify;
+         line-height: 1.5; 
+}
 
 
 h1 { text-align: center;
 font-size: 25px;
 padding-top: 25px;
-font-family: 'Manrope', sans-serif;
-font-weight: bold;
+font-family: Arial, Helvetica, sans-serif;font-weight: bold;
 }
 
 .sharon { padding: 20px;
          font-size: 14px;
+          text-align: justify;  line-height: 1.9; 
+
 }
 
    @media (max-width: 800px) {
@@ -243,7 +248,9 @@ font-weight: bold;
 
 
   .sparrow {
-    font-size: 15px;
+    font-size: 14px;
+     text-align: justify;  line-height: 1.5; 
+
     flex: 0 0 35%;
     padding: 20px;
     box-sizing: border-box;
