--- a/style.css
+++ b/style.css
@@ -403,17 +403,16 @@ border-radius: 20px;
 
 @media (max-width: 800px) {
 .card img {
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-    width: 350px;
+  padding-left: 25px;
+  padding-right:25px;
+  width: 300px;
     height: 200px;
 }
 .card {
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-   width: 350px;
+  
+  padding-left: 25px;
+  padding-right:25px;
+  width: 300px;
    height: 200px;
   }
 
