--- a/style.css
+++ b/style.css
@@ -231,7 +231,7 @@ box-shadow: 0 4px 16px rgba(171, 89, 67, 0.8);
 z-index: 0;
   position: relative;
   overflow: hidden; 
-  background-image: url('https://i.giphy.com/media/v1.Y2lkPTc5MGI3NjExcjBxZ2swNGtlOHc0bWJ1N3kyenFxcDJucW12ZmdyM3M2ZXd3bnR2YiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/rlkpAmX3gaLWE/giphy.gif'); 
+  background-image: url('https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExaXV1dW5zOWdjZTJ3NnF5eHYxdGRzdjQybGo4cXR6NXUyajlxaHJqZCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/f94coCqt6CgXMJs2FR/giphy.webp'); 
   background-size: cover; 
   border-top: 35px; 
 }
